--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^2.3.3"
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3",
+    "nock": "^2.15.0",
+    "supertest": "^1.1.0"
   },
   "dependencies": {
     "colors": "^1.1.2",
